--- a/src/pages/CaseUnico/caseunico.css
+++ b/src/pages/CaseUnico/caseunico.css
@@ -129,7 +129,6 @@
 .brand-posi {
     width: 40%;
     justify-content: start;
-    padding-left: 80px;
     margin-top: 180px;
 }
 
@@ -252,4 +251,144 @@
     max-width: 418px;
     height: 524px;
     border-radius: 8px;
+}
+
+/* responsivo medias */
+
+@media(max-width: 1440px) {}
+@media(max-width: 1366px){}
+
+@media(max-width: 1280px) {
+    .all-projects img{
+        height: 500px;
+    }
+    .projects-cases{
+        margin-bottom: 70px;
+    }
+}
+
+@media(max-width: 1150px) {
+    .text-resume {
+        width: 100%;
+        margin-top: 70px;
+    }
+    .back-text {
+        width: 80%;
+    }
+    .item1, .item2, .item3{
+        height: 620px;
+    }
+    .grupo-image-2 img, .group-images-3 img{
+        height: 620px;
+    }
+}
+
+@media(max-width: 991px) {
+    .back-text{
+        width: 100%;
+        margin-top: 25px;
+    }
+    .brand{
+        flex-direction: column;
+        gap: 30px;
+    }
+    .brand-naming, .brand-posi{
+        width: 100%;
+        margin-top: 0;
+    }
+    .brand-naming{
+        margin-top: 150px;
+    }
+  
+    .brand-naming h3, .brand-posi h3{
+        margin-bottom: 25px;
+    }
+    .visual p{
+        margin-top: 25px;
+    }
+    .cat-abou {
+        width: 70%;
+    }
+    
+}
+
+@media(max-width: 800px) {
+    .item1, .item2, .item3{
+        height: 520px;
+    }
+    .grupo-image-2 img, .group-images-3 img{
+        height: 520px;
+    }
+    .image-hero{
+        height: 520px;
+    }
+   
+    .category-bottom li, .about-bottom p,.visual p,
+    .back-text p,.text-resume p
+    {
+        font-size: 18px;
+    }
+    .category-bottom h3, .about-bottom h3{
+        margin-bottom: 16px;
+    }
+}
+
+@media(max-width: 600px) {
+    .group-grid{
+        gap: 10px;
+    }
+    .item1, .item2, .item3{
+        height: 420px;
+    }
+    .grupo-image-2 img, .group-images-3 img{
+        height: 420px;
+    }
+    .cat-abou{
+        width: 100%;
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+    .about-bottom{
+        width: 100%;
+    }
+    .projects-cases h2{
+        font-size: 50px;
+    }
+}
+
+@media(max-width: 480px) {
+    .category-bottom li, .about-bottom p,.visual p,
+    .back-text p,.text-resume p
+    {
+        font-size: 16px;
+    }
+    .item1, .item2, .item3{
+        height: 320px;
+    }
+    .grupo-image-2 img, .group-images-3 img{
+        height: 320px;
+    }
+    .services{
+        margin-top: 1rem;
+    }
+    .text-resume{
+        margin-top: 50px;
+    }
+}
+@media(max-width: 390px) {
+    .image-hero {
+        height: 420px;
+    }
+    .item1, .item2, .item3{
+        height: 260px;
+    }
+    .grupo-image-2 img, .group-images-3 img{
+        height: 260px;
+    }
+    .projects-cases h2{
+        font-size: 30px;
+    }
+    .all-projects img{
+        height: 300px;
+    }
 }
