--- a/src/pages/CaseUnico/caseunico.css
+++ b/src/pages/CaseUnico/caseunico.css
@@ -224,10 +224,14 @@
     color: var(--color-gray-400);
     line-height: 140%;
     font-family: "neue-haas-grotesk-text";
+    overflow: hidden;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .category-bottom h3 {
     margin-bottom: 2rem;
+    overflow: hidden;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .about-bottom {
@@ -236,7 +240,11 @@
 
 .about-bottom h3 {
     margin-bottom: 2rem;
+    overflow: hidden;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    
 }
+
 
 .more-projects {
     width: 100%;
