arrumando z-index home

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,7 @@
+ .container-first-page{
+    background: black;
+ }
+ 
  /* Home */
 .home {
     width: 100vw;
@@ -9,7 +13,7 @@
 
 .home img {
     object-position: 50% 30%;
-    z-index: -1;
+    z-index: 1;
     position: absolute;
     
 }
@@ -28,6 +32,7 @@
     justify-content: space-between;
     top: 50%;
     position: absolute;
+    z-index: 1;
 }
 .middle .left_part{
     width: 100%;
@@ -89,6 +94,7 @@
     border-top: 1px var(--color-gray-200) solid; 
     padding-top: 40px;
     margin-bottom: 60px;
+    z-index: 1;
 }
 
 
