--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@
   --color-gray-400: #999999;
   --color-gray-50: #F7F7F7;
   --color-white: #FFFFFF;
-  --color-black: #000000
+  --color-black: #000000;
+  --color-bege: #EEEEEE
 }
 
 img {
