--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -79,12 +79,19 @@
 .overlay-blur{
     position: absolute;
     width: 100%;
-    height: 16.4375rem;
-    backdrop-filter: blur(10px);
     z-index: 2;
+}
+.overlay-blur img{
+    width: 100%;
+    height: 20rem;
 }
 .overlay-blur.bottom{
     bottom: 0px;
+
+}
+.overlay-blur.bottom img{
+    transform: rotate(180deg);
+
 
 }
 .see-cases{
@@ -122,7 +129,7 @@
     max-width: max-content;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid;
+    border-bottom: 1px var(--color-white) solid;
     padding-bottom: 5px;
 }
 .all-cases span{
@@ -161,7 +168,8 @@
     font-size: 2rem;
     font-weight: 450;
     line-height: 120%;
-    font-family: "neue-haas-grotesk-display"
+    font-family: "neue-haas-grotesk-display";
+    color: var(--color-white);
 }
 
 .projects-tablet{
@@ -207,14 +215,17 @@
 }
 @media(max-width: 1366px) {
     .overlay-blur{
-        height: 14rem;
+        height: 7rem;
+    }
+    .overlay-blur.bottom{
+        bottom: 20%;
     }
     
 
 }
 @media(max-width: 1280px) {
     .overlay-blur{
-        height: 11rem;
+        height: 8rem;
     }
 
 }
